--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1"
 reqwest = { version = "0.11", features = ["blocking", "json"] }
+sealed = "0.4"
 serde = { version = "1", features = ["derive"] }
 static_assertions = "1"
 
