--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "aws-parameters-and-secrets-lambda"
 version = "0.1.0"
 edition = "2021"
+license = "Apache-2.0 OR MIT"
 
 [dependencies]
 anyhow = "1"
