--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ anyhow = "1"
 reqwest = { version = "0.11", features = ["blocking", "json"] }
 sealed = "0.4"
 serde = { version = "1", features = ["derive"] }
+serde_json = "1"
 static_assertions = "1"
 
 [dev-dependencies]
