--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ license = "Apache-2.0 OR MIT"
 
 [dependencies]
 anyhow = "1"
-reqwest = { version = "0.11", features = ["blocking", "json"] }
+reqwest = { version = "0.11", features = ["json"] }
 sealed = "0.4"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
@@ -16,3 +16,4 @@ static_assertions = "1"
 httpmock = "0.6"
 maplit = "1"
 temp-env = "0.3"
+tokio = { version = "1.23.0", features = ["macros"] }
