--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,4 +1,5 @@
 {
 	"name": "Rust",
-	"image": "mcr.microsoft.com/devcontainers/rust:1-bullseye"
+	"image": "mcr.microsoft.com/devcontainers/rust:1-bullseye",
+	"postCreateCommand": "bash .devcontainer/dev-setup.sh"
 }
