--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,11 @@
 name: PR
 on:
-  - pull_request
+  pull_request:
+    branches:
+      - main
+  push:
+    branches:
+      - main
 jobs:
   compile:
     name: Compile
@@ -10,7 +15,7 @@ jobs:
       - uses: ATiltedTree/setup-rust@v1
         with:
           rust-version: stable
-          components: clippy
+          targets: x86_64-unknown-linux-musl
       - uses: actions/cache@v3
         with:
           path: |
@@ -21,7 +26,7 @@ jobs:
             target/
           key: dependencies-${{ hashFiles('**/Cargo.toml') }}
           restore-keys: dependencies-
-      - run: cargo build --tests
+      - run: cargo build --tests --target=x86_64-unknown-linux-musl
   lint:
     name: Lint
     runs-on: ubuntu-latest
@@ -33,6 +38,7 @@ jobs:
         with:
           rust-version: stable
           components: clippy
+          targets: x86_64-unknown-linux-musl
       - uses: actions/cache/restore@v3
         with:
           path: |
@@ -43,7 +49,7 @@ jobs:
             target/
           key: dependencies-${{ hashFiles('**/Cargo.toml') }}
           restore-keys: dependencies-
-      - run: cargo clippy
+      - run: cargo clippy --target=x86_64-unknown-linux-musl -Dwarnings
   test:
     name: Test
     runs-on: ubuntu-latest
@@ -54,6 +60,7 @@ jobs:
       - uses: ATiltedTree/setup-rust@v1
         with:
           rust-version: stable
+          targets: x86_64-unknown-linux-musl
       - uses: actions/cache/restore@v3
         with:
           path: |
@@ -64,7 +71,7 @@ jobs:
             target/
           key: dependencies-${{ hashFiles('**/Cargo.toml') }}
           restore-keys: dependencies-
-      - run: cargo test
+      - run: cargo test --target=x86_64-unknown-linux-musl
   deny:
     name: Lint dependencies
     runs-on: ubuntu-latest
