--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -60,6 +60,7 @@ jobs:
       - compile
     steps:
       - uses: actions/checkout@v3
+      - run: sudo apt-get install -y musl-tools
       - uses: ATiltedTree/setup-rust@v1
         with:
           rust-version: stable
