--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,6 @@ temp-env = "0.3"
 tokio = { version = "1.23.0", features = ["macros"] }
 tokio-test = "0.4"
 
+[package.metadata.docs.rs]
+default-target = "x86_64-unknown-linux-musl"
+targets = []
